# fuse-promise

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.codex/: README.md
.codex/agents/: fuse-promise.yaml
.codex/skills/fuse-promise-system-component/: SKILL.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  fuse-stable-gates.yml  pages.yml  release.yml
crates/fuse-promise-daemon/: Cargo.toml
crates/fuse-promise-daemon/src/: fuse_adapter.rs  main.rs
crates/fuse-promise-ffi/: Cargo.toml  build.rs
crates/fuse-promise-ffi/src/: lib.rs
crates/fuse-promise-ipc/: Cargo.toml
crates/fuse-promise-ipc/src/: lib.rs
crates/fuse-promise-ipc/tests/: control_socket_security.rs
crates/fuse-promise-runtime/: Cargo.toml
crates/fuse-promise-runtime/src/: lib.rs
debian/: changelog  control  copyright  fuse3-promise.install  libfusepromise-dev.install  libfusepromise1.install  rules
docs/: architecture.md  development-style.md  implementation-decisions.md  index.md  language-and-abi.md  maintenance.md  packaging.md  progress.md  project-statement.md  promise-model.md  public-api.md  release-notes-0.1.0.md  release-notes-1.0.1.md  release-notes-1.0.2.md  release-notes-1.0.3.md  release-notes-1.0.4.md  release-notes-stable.md  requirements.md  roadmap.md  runtime.md  security.md  stable-abi-release.md  testing.md
examples/: materialize.c  minimal_provider.c
include/fuse-promise/: fuse-promise.h
packaging/: nfpm.yaml
packaging/fedora/: fuse-promise.spec
pkgconfig/: fuse-promise.pc.in
scripts/: install-dev.sh  package-linux-bionic-container.sh  package-linux.sh  package-source.sh
systemd/user/: fuse-promised.service  fuse-promised.service.in
tests/: abi-hardening.sh  abi_public_surface.c  control-socket-security.sh  install-metadata.sh  materialize-security.sh  materialize_cancel.c  materialize_security.c  minimal-provider-smoke.sh  performance-stress.sh  performance_stress_provider.c  pread_compat.c  read-only-mvp-smoke.sh  read-through-cache-smoke.sh  read_only_mvp_provider.c  stable-release-gates.sh
tools/fpctl/: Cargo.toml
tools/fpctl/src/: main.rs
