[workspace]
resolver = "2"
members = [
    "crates/fuse-promise-runtime",
    "crates/fuse-promise-ipc",
    "crates/fuse-promise-ffi",
    "crates/fuse-promise-daemon",
    "tools/fpctl",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["fuse-promise contributors"]

[workspace.dependencies]
bincode = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
fuser = { version = "0.17.0", default-features = false, features = ["abi-7-31", "libfuse3"] }
rustix = { version = "1.1", features = ["fs", "net", "process", "time"] }
tempfile = "3.27"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
