[package]
name = "fuse-promise-daemon"
description = "User-session daemon entry point for fuse-promise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "fuse-promised"
path = "src/main.rs"

[dependencies]
fuse-promise-runtime = { path = "../fuse-promise-runtime" }
