[package]
name = "fuse-promise-daemon"
description = "User-session daemon entry point for fuse-promise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fuse-promised"
path = "src/main.rs"

[dependencies]
fuse-promise-ipc = { path = "../fuse-promise-ipc" }
fuse-promise-runtime = { path = "../fuse-promise-runtime" }
fuser = { workspace = true, optional = true }

[features]
default = []
fuse-mount = ["fuse-mount-fuse3"]
fuse-mount-backend = ["dep:fuser"]
fuse-mount-fuse = ["fuse-mount-fuse2"]
fuse-mount-fuse2 = ["fuse-mount-backend", "fuser/libfuse2"]
fuse-mount-fuse3 = ["fuse-mount-backend", "fuser/libfuse3"]
