[package]
name = "fuse-promise-ipc"
description = "Private IPC helpers for fuse-promise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "fuse_promise_ipc"
path = "src/lib.rs"

[dependencies]
bincode.workspace = true
fuse-promise-runtime = { path = "../fuse-promise-runtime" }
rustix.workspace = true

[dev-dependencies]
tempfile.workspace = true
